Add citations total per source task

--- a/app/assets/stylesheets/base/_palette.scss
+++ b/app/assets/stylesheets/base/_palette.scss
@@ -133,7 +133,7 @@ $color-header: #455a64;
 
 /* valid for tables only */
 
-/* DEPRECATE take from lists.scss */
+/* DEPRECATE take from pallette */
 .green {
   color: green;
 }
