Spelling.  Loan dashboard. #2125

--- a/app/views/tasks/accessions/breakdown/sqed_depiction/_form.html.erb
+++ b/app/views/tasks/accessions/breakdown/sqed_depiction/_form.html.erb
@@ -109,7 +109,7 @@
     </div>
   </div>
 
-  <div class="flex-seperate">
+  <div class="flex-saperate">
     <ul class="context-menu actions">
       <li> <%= collection_object_radial_tag(@result.sqed_depiction.depiction_object.metamorphosize) %> </li>
       <li> <%= tag_default_icon(@result.sqed_depiction.depiction_object.metamorphosize) -%> </li>
