Refactor data attribute facet

--- a/app/javascript/vue/assets/styles/utilities/border.scss
+++ b/app/javascript/vue/assets/styles/utilities/border.scss
@@ -13,3 +13,10 @@
 .rounded-br-none {
   border-bottom-right-radius: 0px;
 }
+
+hr.divisor {
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
