--- a/app/assets/stylesheets/helpers/hub/tasks.scss
+++ b/app/assets/stylesheets/helpers/hub/tasks.scss
@@ -154,7 +154,7 @@
     }
 
     .collection_object {
-      background-image: image-url("picking.svg");
+      background-image: image-url("bug.svg");
     }
 
     .nomenclature {
