--- a/app/assets/javascripts/views/hub/filter_bar.js.erb
+++ b/app/assets/javascripts/views/hub/filter_bar.js.erb
@@ -10,7 +10,7 @@ Object.assign(TW.workbench.hub.filter_hub, {
 			$("#filter").attr('icons-loaded', 'true');
       $('[data-filter-category="nomenclature"]').prepend('<img src="<%= asset_path("new.svg") %>"/>');
       $('[data-filter-category="source"]').prepend('<img src="<%= asset_path("book.svg") %>"/>');
-      $('[data-filter-category="collection_object"]').prepend('<img src="<%= asset_path("picking.svg") %>"/>');
+      $('[data-filter-category="collection_object"]').prepend('<img src="<%= asset_path("bug.svg") %>"/>');
       $('[data-filter-category="collecting_event"]').prepend('<img src="<%= asset_path("geo_location.svg") %>"/>');
       $('[data-filter-category="biology"]').prepend('<img src="<%= asset_path("biology.svg") %>"/>');
       $('[data-filter-category="matrix"]').prepend('<img src="<%= asset_path("matrix.svg") %>"/>');
