--- a/app/views/otu_relationships/edit.html.erb
+++ b/app/views/otu_relationships/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', otu_relationship: @otu_relationship %>
 
-<%= link_to 'Show', @otu_relationship %> |
+<%= link_to 'Show', @otu_relationship.metamorphosize %> |
 <%= link_to 'Back', otu_relationships_path %>
