--- a/app/assets/stylesheets/base/_whitespace.scss
+++ b/app/assets/stylesheets/base/_whitespace.scss
@@ -164,6 +164,10 @@ $pane_margin: 0.2em;
 
 // Padding
 
+.padding-xsmall {
+  padding: $standard_padding * 0.25;
+}
+
 .padding-small {
   padding: $standard_padding * 0.5;
 }
@@ -174,6 +178,10 @@ $pane_margin: 0.2em;
 
 .padding-large {
   padding: $standard_padding * 1.5;
+}
+
+.padding-xsmall-top {
+  padding-top: $standard_padding * 0.25;
 }
 
 .padding-small-top {
@@ -188,6 +196,10 @@ $pane_margin: 0.2em;
   padding-top: $standard_padding * 1.5;
 }
 
+.padding-xsmall-left {
+  padding-left: $standard_padding * 0.25;
+}
+
 .padding-small-left {
   padding-left: $standard_padding * 0.5;
 }
@@ -200,6 +212,10 @@ $pane_margin: 0.2em;
   padding-left: $standard_padding * 1.5;
 }
 
+.padding-xsmall-right {
+  padding-right: $standard_padding * 0.25;
+}
+
 .padding-small-right {
   padding-right: $standard_padding * 0.5;
 }
@@ -210,6 +226,10 @@ $pane_margin: 0.2em;
 
 .padding-large-right {
   padding-right: $standard_padding * 1.5;
+}
+
+.padding-xsmall-bottom {
+  padding-bottom: $standard_padding * 0.25;
 }
 
 .padding-small-bottom {
