Widen a loans dashboard graph

--- a/app/views/tasks/loans/dashboard/index.html.erb
+++ b/app/views/tasks/loans/dashboard/index.html.erb
@@ -70,7 +70,7 @@
   </div>
 
   <div class="panel content separate-top">
-    <%= column_chart loan_items_totals_per_year(@loans), height: '400px', stacked: true, download: true, descrete: true, ytitle: 'Total', xtitle: 'Year', title: 'Individuals by year (date sent)' %>
+    <%= column_chart loan_items_totals_per_year(@loans), height: '400px', width: '800px', stacked: true, download: true, descrete: true, ytitle: 'Total', xtitle: 'Year', title: 'Individuals by year (date sent)' %>
   </div>
 
   <div class="panel content separate-top">
