Cleanup type name

--- a/app/views/otu_relationships/_attributes.html.erb
+++ b/app/views/otu_relationships/_attributes.html.erb
@@ -5,16 +5,11 @@
 
 <p>
   <strong>Type:</strong>
-  <%= @otu_relationship.type_name %>
+  <%= otu_relationship_type_label( @otu_relationship)  %>
 </p>
 
 <p>
   <strong>Object otu:</strong>
   <%= otu_link(@otu_relationship.object_otu) %>
-</p>
-
-<p>
-  <strong>Project:</strong>
-  <%= @otu_relationship.project_id %>
 </p>
 
