OTU relationship validation, type fix.

--- a/app/views/otu_relationships/_form.html.erb
+++ b/app/views/otu_relationships/_form.html.erb
@@ -17,7 +17,7 @@
 
   <div class="field">
     <%= form.label :type %><br>
-    <%= form.select :type, options: %w{OtuRelationship;:Intersecting OtuRelationship::Disjoint OtuRelationship::Equal OtuRelationship::ProperPartInverse OtuRelationship::ProperPart OtuRelationship::PartiallyOverlapping } %>
+    <%= form.select :type, options: %w{OtuRelationship::Intersecting OtuRelationship::Disjoint OtuRelationship::Equal OtuRelationship::ProperPartInverse OtuRelationship::ProperPart OtuRelationship::PartiallyOverlapping } %>
   </div>
 
   <br>
