Fix audio permission

--- a/app/assets/javascripts/workbench/notices.js.erb
+++ b/app/assets/javascripts/workbench/notices.js.erb
@@ -55,8 +55,10 @@ Object.assign(TW.workbench.alert, {
   },
 
   play: function (type) {
-    var sound = new Audio(this.audioFile[type] || this.audioFile.default);
-    sound.play();
+    if (!document.hidden) {
+      const sound = new Audio(this.audioFile[type] || this.audioFile.default);
+      sound.play();
+    }
   }
 });
 
