--- a/app/views/geographic_areas/show.html.erb
+++ b/app/views/geographic_areas/show.html.erb
@@ -23,12 +23,19 @@
   <p><em> This geographic area translates to this shape in the aggregate WebLevel1 map. </em></p>
 
   <div>
-    GeographicItem ID: <%= a = CachedMapItem.translate_geographic_item_id(
-      @geographic_area.default_geographic_item_id,
-      'AssertedDistribution',
-      ['ne_countries', 'ne_states'],
-      percent_overlap_cutoff: 50.0) %>
 
+    <ul>
+      <li>
+          GeographicItem ID(s): <%= a = CachedMapItem.translate_geographic_item_id(
+            @geographic_area.default_geographic_item_id,
+            'AssertedDistribution',
+            ['ne_countries', 'ne_states'],
+            percent_overlap_cutoff: 50.0) %>
+      </li>
+
+      <li>Corresponding GeographicAreas: <%= geographic_area_link_list(GeographicArea.joins(:geographic_areas_geographic_items).where(geographic_areas_geographic_items: {geographic_item_id: a})) %> </li>
+
+    </ul>
     <%= simple_map( GeographicItem.where(id: a) ) %>
   </div>
 
