--- a/app/views/geographic_areas/show.html.erb
+++ b/app/views/geographic_areas/show.html.erb
@@ -15,29 +15,31 @@
   <p><%= similarly_named_records_list(@geographic_area) -%> </p>
 
   <p><strong> Children: </strong>
-    <%= geographic_area_link_list(@geographic_area.children) -%>
-    <%= tag.em('None') if @geographic_area.children.empty? -%>
+  <%= geographic_area_link_list(@geographic_area.children) -%>
+  <%= tag.em('None') if @geographic_area.children.empty? -%>
   </p>
 
-  <h3> WebLevel1 map </h3>
-  <p><em> This geographic area translates to this shape in the aggregate WebLevel1 map. </em></p>
+  <% dgi_id = @geographic_area.default_geographic_item_id %> 
+  <% if dgi_id %>
+    <h3> WebLevel1 map </h3>
+    <p><em> This geographic area translates to this shape in the aggregate WebLevel1 map. </em></p>
 
-  <div>
-
-    <ul>
-      <li>
+    <div>
+      <ul>
+        <li>
           GeographicItem ID(s): <%= a = CachedMapItem.translate_geographic_item_id(
-            @geographic_area.default_geographic_item_id,
+            dgi_id,
             'AssertedDistribution',
             ['ne_countries', 'ne_states'],
             percent_overlap_cutoff: 50.0) %>
-      </li>
+        </li>
 
-      <li>Corresponding GeographicAreas: <%= geographic_area_link_list(GeographicArea.joins(:geographic_areas_geographic_items).where(geographic_areas_geographic_items: {geographic_item_id: a})) %> </li>
+        <li>Corresponding GeographicAreas: <%= geographic_area_link_list(GeographicArea.joins(:geographic_areas_geographic_items).where(geographic_areas_geographic_items: {geographic_item_id: a})) %> </li>
 
-    </ul>
-    <%= simple_map( GeographicItem.where(id: a) ) %>
-  </div>
+      </ul>
+      <%= simple_map( GeographicItem.where(id: a) ) %>
+    </div>
+  <% end %>
 
 <% end %>
 
