Refactor New image task

--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -1,5 +1,6 @@
 $font-prefix: '../../../node_modules/@ibm/plex';
 @import '../vue//assets/styles/utilities.scss';
+@import '../vue//assets/styles/utilities/flex.scss';
 @import '../vue//assets/styles/utilities/width.scss';
 @import '../vue//assets/styles/utilities/position.scss';
 @import '../vue/assets/styles/variables/_palette.scss';
