--- a/app/views/namespaces/batch_load/simple/_batch_load.html.erb
+++ b/app/views/namespaces/batch_load/simple/_batch_load.html.erb
@@ -13,6 +13,7 @@
         <li>Column headers are <%= link_to('here', asset_path('batch_load_templates/namespaces/namespaces_simple_batch_load.tab'), target: '_blank') -%>.</li>
         <li>Multiple uploads of the same data will fail the duplicated data.</li>
         <li>There is currently some|no size limit to the file being loaded but this may change in the future.</li>
+        <li>Use the delimiter keyword <code>NONE</code> to indicate no delimiter. Leaving the field blank will use the default delimiter (a space).</li>
       </ul>
     </div>
 
@@ -20,11 +21,11 @@
       <h3> Example file </h3>
 
       <p> A tab delimited formatted file
-          In the example whitespace is a tab. View sample file template.</p>
+          In the example whitespace is a tab. View <%= link_to('sample file template', asset_path('batch_load_templates/namespaces/namespaces_simple_batch_load.tab'), target: '_blank') -%>.</p>
 
       <pre class="fixed_width_font">
-        institution name short_name verbatim_short_name
-        institution_a name_a short_name_a verbatim_short_name_a
+        institution name short_name verbatim_short_name delimiter
+        institution_a name_a short_name_a verbatim_short_name_a NONE
       </pre>
     </div>
 
